<resources>
    <string name="app_name">Bookista</string>
    <string name="welcome_screen_text">bookista</string>
    <string name="login">Login</string>
    <string name="forgot_password">forgotten password</string>
    <string name="do_not_have_an_account">Do no have an account?</string>
    <string name="create_account">create new account</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="send">Send</string>
    <string name="account_created">Account created.Please verify your email before logging in</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="register">Register</string>
    <string name="go_back_to_login">back to login</string>
    <string name="recover_account">Recover account</string>
    <string name="if_account_with_email">If account with given email exists, it will receive email with further instructions</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="network_error">Network error occurred. Check your internet connection</string>
    <string name="weak_password">Please enter stronger password</string>
    <string name="email_already_used">Account with this email already exists</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="recover_email_sent">Check your email for instructions</string>
    <string name="folder_name_already_exists">Folder name already taken</string>
    <string name="unknown_error">An error occurred. Please try again later</string>
    <string name="too_many_requests">Too many requests. Try again later</string>
    <string name="verification_email_sent">Verification email sent</string>
    <string name="no_user_found">No user found</string>
    <string name="email_not_verified">Your email is not validated</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="you_were_logged_out">You were logged out. Please log in again</string>
    <string name="settings">settings</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="wishlist">Wishlist</string>
    <string name="profile">Profile</string>
    <string name="about">ABOUT</string>
    <string name="open_bag">Open bag</string>
    <string name="go_to_bag">Go to bag</string>
    <string name="borrow_books">Borrow books</string>
    <string name="remove">Remove</string>
    <string name="book_already_in_bag">Book is already in a bag</string>
    <string name="book_added_to_bag">Book added to the bag</string>
    <string name="more_menu">moreMenu</string>
</resources>